--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "nedb": "^1.8.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
   }
 }
